# seo-openenv-eval

./: .env.example  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: environment.py  main.py  models.py
app/tasks/: task1.py  task2.py  task3.py
server/: app.py
